# PersonaOS

./: .gitignore  EMP_Technical_Spec.md  PersonaOS_Economic_Memory_Protocol_Idea.md  README.md  index.html  package-lock.json  package.json  start.ps1  start.sh
backend/: .env.example  package-lock.json  package.json
backend/src/: auth.js  crypto.js  gemini.js  ingest.js  profiles.js  scoring.js  server.js  stellar.js  vault.js
contracts/emp-attestor/: Cargo.toml
contracts/emp-attestor/src/: lib.rs  test.rs
contracts/emp-attestor/test_snapshots/test/: attest_requires_consent_then_succeeds.1.json  attest_without_consent_fails.1.json  duplicate_attest_fails.1.json  revoke_consent_blocks_new_attest.1.json  revoke_marks_invalid.1.json
frontend/: .env.example  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.js  nav.js  page.js  seal.js  ui.js  wallet.js
frontend/app/issue/: page.js
frontend/app/manage/: page.js
frontend/app/vault/: page.js
frontend/app/verify/: page.js
frontend/lib/: emp.js
samples/: bank_sample.csv
src/: App.css  App.tsx  index.css
